objects/LLC_BI__Annual_Review__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__AP_Stress_Index_RG__c</fullName>
        <description>This field is currently not being used</description>
        <label>AP Stress Index (G)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__AP_Stress_Index__c</fullName>
        <description>This field is currently not being used</description>
        <formula>0.14 * LLC_BI__AP_Stress_Index_RG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP Stress Index - Wght</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__AP_Stress_Index_actual__c</fullName>
        <description>This field is currently not being used</description>
        <label>AP Stress Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__AR_Management_Experience__c</fullName>
        <description>This field is currently not being used</description>
        <formula>0.09 *  LLC_BI__Management_Experience_RG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Management Experience - Wght</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <description>This field is required. It is populated automatically when creating a risk rating review from the relationship and manually when creating from the loan. This field specifies the relationship associated with the annual review (risk rating review).</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Risk Rating Review</relationshipLabel>
        <relationshipName>Annual_Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cash_Bal_Year_1__c</fullName>
        <description>This field is currently not being used</description>
        <label>Cash Bal Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cash_Bal_Year_2__c</fullName>
        <description>This field is currently not being used</description>
        <label>Cash Bal Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cash_Bal_Year_3__c</fullName>
        <description>This field is currently not being used</description>
        <label>Cash Bal Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cash_Flow_Coverage_RG__c</fullName>
        <description>This field is currently not being used</description>
        <label>Cash Flow Coverage (G)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cash_Flow_Coverage__c</fullName>
        <description>This field is currently not being used</description>
        <formula>0.24 *  LLC_BI__Cash_Flow_Coverage_RG__c</formula>
        <label>Cash Flow Coverage - Wght</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cash_Flow_Coverage_actual__c</fullName>
        <description>This field is currently not being used</description>
        <label>Cash Flow Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>This field is only required if an overriden risk grade value is entered. Otherwise, it is not required. This field is used to specify the reason a different risk grade should be used than what is automatically calculated via the risk grade worksheet.</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Computed_Risk_Grade_Value__c</fullName>
        <description>This field is optional. It is populated automatically by using the risk rating worksheet. This field should not be edited directly. This field stores the value initially calculated by the risk rating worksheet. If no overriden risk grade is set, this value is used to calculate the final risk grade.</description>
        <label>Computed Risk Grade Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Score_RG__c</fullName>
        <description>This field is currently not being used</description>
        <label>Credit Score (G)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Score_Year_1__c</fullName>
        <description>This field is currently not being used</description>
        <label>Credit Score Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Score_Year_2__c</fullName>
        <description>This field is currently not being used</description>
        <label>Credit Score Year 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Score_Year_3__c</fullName>
        <description>This field is currently not being used</description>
        <label>Credit Score Year 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Score__c</fullName>
        <description>This field is currently not being used</description>
        <formula>0.13 *  LLC_BI__Credit_Score_RG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Score - Wght</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Score_actual__c</fullName>
        <description>This field is currently not being used</description>
        <label>Credit Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DSC_Post_OC_Year_1__c</fullName>
        <description>This field is currently not being used</description>
        <label>DSC Post OC Year 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DSC_Post_OC_Year_2__c</fullName>
        <description>This field is currently not being used</description>
        <label>DSC Post OC Year 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DSC_Post_OC_Year_3__c</fullName>
        <description>This field is currently not being used</description>
        <label>DSC Post OC Year 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Decisioned__c</fullName>
        <description>This field is optional. It is automatically populated by trigger when the risk rating review is approved or declined.</description>
        <label>Date Decisioned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Display_In_Credit_Memo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It populated manually by the user. When enabled, the risk grade worksheet is displayed in the credit memo for this loan. When disabled, the risk grade worksheet is not displayed in the credit memo. Only one risk grade review may have this enabled per loan. A trigger automatically deselects this field on any other risk rating review for the loan whenever it is enabled.</description>
        <label>Display In Credit Memo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Final_Risk_Grade__c</fullName>
        <description>This field is optional. It is populated automatically by using the risk rating worksheet. This field should not be edited directly. This field stores the final risk grade value, which is the value that should be used as the relationship&apos;s risk grade. It is set by the overidden risk grade if one exists, and the calculated risk grade if it does not. It will be rounded if that field is enabled.</description>
        <formula>IF( LLC_BI__Risk_Grade_Template__r.LLC_BI__Round_Final_Risk_Grade__c,
  ROUND(IF(ISNULL(LLC_BI__Overridden_Risk_Grade_Value__c) , LLC_BI__Computed_Risk_Grade_Value__c, LLC_BI__Overridden_Risk_Grade_Value__c),0),
  IF(ISNULL(LLC_BI__Overridden_Risk_Grade_Value__c) , LLC_BI__Computed_Risk_Grade_Value__c, LLC_BI__Overridden_Risk_Grade_Value__c)
)</formula>
        <label>Final Risk Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Global_Cash_Flow_G2__c</fullName>
        <description>This field is currently not being used</description>
        <label>Global Cash Flow (G)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Global_Cash_Flow_Wght__c</fullName>
        <description>This field is currently not being used</description>
        <formula>0.19 *  LLC_BI__Global_Cash_Flow_G2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Cash Flow - Wght</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Global_Cash_Flow__c</fullName>
        <description>This field is currently not being used</description>
        <label>Global Cash Flow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is populated automatically when creating a risk rating review from the loan and blank when creating from the relationship. This field specifies the loan associated with the risk rating review.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Risk Rating Review</relationshipLabel>
        <relationshipName>Risk_Rating_Review</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Management_Experience_RG__c</fullName>
        <description>This field is currently not being used</description>
        <label>Management Experience (G)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Management_Experience_actual__c</fullName>
        <description>This field is currently not being used</description>
        <label>Management Experience</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Overridden_Risk_Grade_Value__c</fullName>
        <description>This field is optional. It is populated manually within the risk rating worksheet. This field should not be edited directly. This field stores the manually populated override risk grade if one is set int he risk rating worksheet. If this value is populated, this value will be used to calculate the final risk grade instead of the calculated risk grade. If a user sets a overriden risk grade within the risk rating worksheet. they are required to add a comment.</description>
        <label>Overridden Risk Grade Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Override__c</fullName>
        <description>This field is currently not being used</description>
        <label>Override</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pers_Bus_Liquidity_RG__c</fullName>
        <description>This field is currently not being used</description>
        <label>Pers. &amp; Bus. Liquidity (G)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pers_Bus_Liquidity_actual__c</fullName>
        <description>This field is currently not being used</description>
        <label>Pers. &amp; Bus. Liquidity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Personal_Liquidity__c</fullName>
        <description>This field is currently not being used</description>
        <formula>0.13 *  LLC_BI__Pers_Bus_Liquidity_RG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pers. &amp; Bus Liquidity - Wght</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RG_Version__c</fullName>
        <defaultValue>2</defaultValue>
        <description>This is optional. It is used to denotes the feature version of the risk grade worksheet. The default value is 2, which indicates the current version. If an existing record&apos;s value is different, it indicates a previous version.</description>
        <label>RG Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rev_Year_1__c</fullName>
        <description>This field is currently not being used</description>
        <label>Rev Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rev_Year_2__c</fullName>
        <description>This field is currently not being used</description>
        <label>Rev Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rev_Year_3__c</fullName>
        <description>This field is currently not being used</description>
        <label>Rev Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Revenue_Growth_RG__c</fullName>
        <description>This field is currently not being used</description>
        <label>Revenue Growth (G)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Revenue_Growth__c</fullName>
        <description>This field is currently not being used</description>
        <formula>0.09 *  LLC_BI__Revenue_Growth_RG__c</formula>
        <label>Revenue Growth - Wght</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Revenue_Growth_actual__c</fullName>
        <description>This field is currently not being used</description>
        <label>Revenue Growth (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is populated automatically whenever creatings a risk rating review from the relationship or loan. This field specifies the Risk Grade Template associated with the Annual Review (Risk Rating Review)</description>
        <label>Risk Grade Template</label>
        <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
        <relationshipLabel>Risk Rating Review</relationshipLabel>
        <relationshipName>Risk_Rating_Review</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is optional. Depending on the environment, it can be manually populated or automatically populated via an approval process. This field is used to determine whether the risk grade worksheet (and thus the risk grade) is approved for use. The default values are: Not Approved, Approved, Declined, and In Review.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Approved</fullName>
                    <default>true</default>
                    <label>Not Approved</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_1st__c</fullName>
        <defaultValue>YEAR(Today()) - 3</defaultValue>
        <description>This field is no longer used.</description>
        <label>Year 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_2nd__c</fullName>
        <defaultValue>YEAR(Today()) - 2</defaultValue>
        <description>This field is no longer used.</description>
        <label>Year 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_3rd__c</fullName>
        <defaultValue>YEAR(Today()) - 1</defaultValue>
        <description>This field is no longer used.</description>
        <label>Year 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Risk Rating Review</label>
    <nameField>
        <displayFormat>RG-{0000000}</displayFormat>
        <label>Risk Rating Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Rating Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Mandatory_comment</fullName>
        <active>true</active>
        <description>the comment is mandatory if the risk grade value has been overridden</description>
        <errorConditionFormula>LEN(LLC_BI__Comments__c) == 0 &amp;&amp; LLC_BI__Overridden_Risk_Grade_Value__c &gt; 0</errorConditionFormula>
        <errorDisplayField>LLC_BI__Overridden_Risk_Grade_Value__c</errorDisplayField>
        <errorMessage>Please add a comment before overriding the computed risk grade value.</errorMessage>
    </validationRules>
</CustomObject>